<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/red_B9121B"
        android:text="@string/dashboard_fragment" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_farouk_jabberi"/>

    <TextView
        android:id="@+id/balance_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/your_account_balance" />


</RelativeLayout>
