<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.faroukjabberi.bankaccountkata.Activities.SignInActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="97dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:gravity="center"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/username"
        android:layout_alignRight="@+id/username"
        android:layout_below="@+id/username"
        android:hint="@string/password"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:inputType="textPassword"
        android:gravity="center"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/sign_in"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
